smear/tests/boolean_directive/short_fail.stderr
error: The value of `short` must be an ASCII alphabetic character, but got '9'.
 --> tests/boolean_directive/short_fail.rs:2:17
  |
2 | #[smear(short = '9')]
  |                 ^^^

error: The value of `short` must be an ASCII alphabetic character, but got '_'.
 --> tests/boolean_directive/short_fail.rs:6:17
  |
6 | #[smear(short = '_')]
  |                 ^^^

error: The value of `short` must be an ASCII alphabetic character, but got '-'.
  --> tests/boolean_directive/short_fail.rs:10:17
   |
10 | #[smear(short = '-')]
   |                 ^^^

error: Unexpected literal type `int`
  --> tests/boolean_directive/short_fail.rs:14:17
   |
14 | #[smear(short = 9)]
   |                 ^

error: expected a value for this attribute: `short` or `short = '...'`
  --> tests/boolean_directive/short_fail.rs:18:9
   |
18 | #[smear(short())]
   |         ^^^^^^^
